--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav ul li a:hover{
     padding: 5% 10%;
 }
 .link li{
-    list-style: url(img/list3.png);
+    list-style: url(list3.png);
     margin-left: 15%;
     margin-top: 5%;
     margin-bottom: 5%;
